crates/test-ui/ui/extern_methods_variadic.stderr
error: variadic methods are not yet supported
 --> ui/extern_methods_variadic.rs
  |
  | /     extern_methods!(
  | |         #[unsafe(method(a:))]
  | |         fn variadic_class(arg: i32, vararg: ...);
  | |     );
  | |_____^
  |
  = note: this error originates in the macro `$crate::__parse_sel_and_params_inner` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error: variadic methods are not yet supported
 --> ui/extern_methods_variadic.rs
  |
  | /     extern_methods!(
  | |         #[unsafe(method(a:))]
  | |         fn variadic_instance(&self, arg: i32, vararg: ...);
  | |     );
  | |_____^
  |
  = note: this error originates in the macro `$crate::__parse_sel_and_params_inner` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error: variadic methods are not yet supported
 --> ui/extern_methods_variadic.rs
  |
  | /     extern_methods!(
  | |         #[unsafe(method(a:_))]
  | |         fn variadic_error(vararg: ...) -> Result<(), Retained<NSObject>>;
  | |     );
  | |_____^
  |
  = note: this error originates in the macro `$crate::__parse_sel_and_params_inner` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `...` is not supported for non-extern functions
 --> ui/extern_methods_variadic.rs
  |
  |         fn variadic_class(arg: i32, vararg: ...);
  |                                     ^^^^^^^^^^^
  |
  = help: only `extern "C"` and `extern "C-unwind"` functions may have a C variable argument list

error: `...` is not supported for non-extern functions
 --> ui/extern_methods_variadic.rs
  |
  |         fn variadic_instance(&self, arg: i32, vararg: ...);
  |                                               ^^^^^^^^^^^
  |
  = help: only `extern "C"` and `extern "C-unwind"` functions may have a C variable argument list

error: `...` is not supported for non-extern functions
 --> ui/extern_methods_variadic.rs
  |
  |         fn variadic_error(vararg: ...) -> Result<(), Retained<NSObject>>;
  |                           ^^^^^^^^^^^
  |
  = help: only `extern "C"` and `extern "C-unwind"` functions may have a C variable argument list

error[E0658]: C-variadic functions are unstable
 --> ui/extern_methods_variadic.rs
  |
  | /     extern_methods!(
  | |         #[unsafe(method(a:))]
  | |         fn variadic_class(arg: i32, vararg: ...);
  | |     );
  | |_____^
  |
  = note: see issue #44930 <https://github.com/rust-lang/rust/issues/44930> for more information
  = help: add `#![feature(c_variadic)]` to the crate attributes to enable
  = note: this error originates in the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: C-variadic functions are unstable
 --> ui/extern_methods_variadic.rs
  |
  | /     extern_methods!(
  | |         #[unsafe(method(a:))]
  | |         fn variadic_instance(&self, arg: i32, vararg: ...);
  | |     );
  | |_____^
  |
  = note: see issue #44930 <https://github.com/rust-lang/rust/issues/44930> for more information
  = help: add `#![feature(c_variadic)]` to the crate attributes to enable
  = note: this error originates in the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: C-variadic functions are unstable
 --> ui/extern_methods_variadic.rs
  |
  | /     extern_methods!(
  | |         #[unsafe(method(a:_))]
  | |         fn variadic_error(vararg: ...) -> Result<(), Retained<NSObject>>;
  | |     );
  | |_____^
  |
  = note: see issue #44930 <https://github.com/rust-lang/rust/issues/44930> for more information
  = help: add `#![feature(c_variadic)]` to the crate attributes to enable
  = note: this error originates in the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)
